# AI-Agent-Rust-Slack

./: Cargo.toml  Dockerfile  README.md
src/: bindings.rs  lib.rs
wit/: world.wit
