[package]
name = "ai-agent-sockets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.41.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.component]
package = "component:ai-agent"

[package.metadata.component.target]
path = "wit"
world = "ai-agent-world"

[package.metadata.component.target.dependencies]
"wasi:http" = { version = "0.2.7" }
"wasi:sockets" = { version = "0.2.7" }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = "symbols"
